--- a/index.css
+++ b/index.css
@@ -8,8 +8,8 @@ html {
   flex-direction: column;
 }
 body {
-  background-color: #f5f6f8;
-  color: #3b3b3b;
+  background-color: #131A26;
+  color: #ffffff;
   font-size: 14px;
   font-weight: 300;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto",
@@ -39,39 +39,39 @@ textarea,
 }
 
 h1 {
-  color: #3b3b3b;
+  color: #ffffff;
   font-size: 32px;
   font-weight: bold;
   margin: 0px;
 }
 h2 {
-  color: #3b3b3b;
+  color: #ffffff;
   font-size: 28px;
   font-weight: bold;
   margin: 16px 0 8px 0;
 }
 h3 {
-  color: #3b3b3b;
+  color: #ffffff;
   font-size: 24px;
   font-weight: 700;
   margin: 8px 0 4px 0;
 }
 h4 {
-  color: #3b3b3b;
+  color: #ffffff;
   font-size: 18px;
   font-weight: 600;
   margin-top: 5px;
   margin-bottom: 4px;
 }
 h5 {
-  color: #3b3b3b;
+  color: #ffffff;
   font-size: 16px;
   font-weight: bold;
   margin-top: 5px;
   margin-bottom: 4px;
 }
 h6 {
-  color: #3b3b3b;
+  color: #ffffff;
   font-size: 16px;
   font-weight: bold;
   margin-top: 5px;
@@ -107,7 +107,7 @@ footer a {
 
 .pageContainer {
   padding: 30px 50px;
-  background-color: #fff;
+  background-color: #212937;
   box-shadow: 0px 6px 18px rgba(0, 0, 0, 0.06);
   border-radius: 5px;
   max-width: 900px;
