--- a/index.css
+++ b/index.css
@@ -122,7 +122,7 @@ footer a {
 }
 
 .headline span {
-  background-color: #f5f6f8;
+  background-color: #121925;
   border-radius: 5px;
   padding: 6px;
   margin-left: 12px;
@@ -137,7 +137,7 @@ footer a {
 }
 
 .statusContainer {
-  border: 1px solid #ededed;
+  border: 1px solid #212937;
   border-radius: 5px;
   padding-top: 20px;
   text-align: left;
